[gd_scene load_steps=7 format=2]

[ext_resource path="res://map/Map.gd" type="Script" id=1]
[ext_resource path="res://map/map.jpg" type="Texture" id=2]
[ext_resource path="res://map/Camera.gd" type="Script" id=3]
[ext_resource path="res://map/Gestures.gd" type="Script" id=4]
[ext_resource path="res://map/Location.tscn" type="PackedScene" id=5]
[ext_resource path="res://map/CombatPosition.tscn" type="PackedScene" id=6]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource( 3 )
margin = Vector2( 10, 10 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="Gestures" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Gestures"]

[node name="Locations" type="Node" parent="."]

[node name="NorthTerrace" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 1061.82, 464.6 )
rotation = -0.287979
dimension = Vector2( 360, 95 )

[node name="Keep" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 993.942, 703.634 )
rotation = -0.287979
dimension = Vector2( 108, 107 )

[node name="GreatHall" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 1287.44, 617.362 )
rotation = -0.287979
dimension = Vector2( 188, 107 )

[node name="SouthTerrace" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 1263.76, 939.306 )
rotation = -0.287979
dimension = Vector2( 300, 190 )

[node name="GateHouse" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 2353.49, 724.771 )
rotation = 0.514872
dimension = Vector2( 150, 117 )

[node name="BesottenJenny" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 2629.04, 838.112 )
dimension = Vector2( 70, 260 )

[node name="Cellar" parent="Locations" instance=ExtResource( 5 )]
position = Vector2( 195.449, 1302 )
dimension = Vector2( 180, 180 )

[node name="CombatPositions" type="Node" parent="."]

[node name="CP-01" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 779, 552 )
rotation = -0.287979

[node name="CP-02" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1082, 466 )
rotation = -0.287979

[node name="CP-03" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1207, 419 )
rotation = -0.287979

[node name="CP-04" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1344, 339 )
rotation = -0.287979

[node name="CP-05" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 929, 666 )
rotation = -0.287979

[node name="CP-06" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1031, 636 )
rotation = -0.287979

[node name="CP-07" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 959, 769 )
rotation = -0.287979

[node name="CP-08" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1062, 738 )
rotation = -0.287979

[node name="CP-09" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1237, 574 )
rotation = -0.287979

[node name="CP-10" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1268, 676 )
rotation = -0.287979

[node name="CP-11" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1399, 528 )
rotation = -0.287979

[node name="CP-12" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1430, 630 )
rotation = -0.287979

[node name="CP-13" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1273, 827 )
rotation = -0.287979

[node name="CP-14" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1419, 805 )
rotation = -0.287979

[node name="CP-15" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1095, 982 )
rotation = -0.604214

[node name="CP-16" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 1271, 1053 )
rotation = -0.604214

[node name="CP-17" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2324, 647 )
rotation = 0.510945

[node name="CP-18" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2271, 740 )
rotation = 0.510945

[node name="CP-19" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2446, 712 )
rotation = 0.510945

[node name="CP-20" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2393, 807 )
rotation = 0.510945

[node name="CP-21" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2614, 635 )

[node name="CP-22" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2614, 742 )

[node name="CP-23" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2614, 930 )

[node name="CP-24" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 2614, 1039 )

[node name="CP-25" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 86, 1232 )

[node name="CP-26" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 193, 1232 )

[node name="CP-27" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 302, 1232 )

[node name="CP-28" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 139, 1339 )

[node name="CP-29" parent="CombatPositions" instance=ExtResource( 6 )]
position = Vector2( 247, 1340 )

